--- a/src/resources/views/admin/promotionDetail_view.hbs
+++ b/src/resources/views/admin/promotionDetail_view.hbs
@@ -1,5 +1,9 @@
 {{>header_admin}}
- 
+  <style>
+    .dropdown-content{
+      display: none;
+    }
+  </style>
 <div class="create-container">
 
 <div class="table-foods  container ">
@@ -49,8 +53,8 @@
             <span class="helper-text" data-error="This field must be greater than 0" data-success=""></span>
         </div>
       </div>
-       <button onclick="" class="btn waves-effect waves-light" type="submit">Add
-    <i class="material-icons right">send</i>
+       <button class="btn waves-effect waves-light" type="submit">Add
+        <i class="material-icons right">send</i>
       </button>
     </form> 
 
