--- a/src/resources/views/user/user_home.hbs
+++ b/src/resources/views/user/user_home.hbs
@@ -130,7 +130,7 @@
       </section>
       <div class="container">
       <section class="products-section primary-color">
-          <h6 class="more"><a href="./products.html">Browse more...</a></h6>
+          <h6 class="more"><a href="/goods">Browse more...</a></h6>
         </section>
         <section class="articles-section primary-color">
           <h2 class="title">Recent Articles</h2>
@@ -151,7 +151,7 @@
             {{/each}}
             </div>
           </div>
-          <h6 class="more"><a href="./news.html">Browse more...</a></h6>
+          <h6 class="more"><a href="/news">Browse more...</a></h6>
         </section>
         <div class="embed-media">
           <iframe
