--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -53,7 +53,7 @@
   </div>
 </nav>
 <ul id="dropdown1" class="dropdown-content">
-  <li><a href="">Account</a></li>
+  <li><a href="/user_account/view">Account</a></li>
   <li><a href="">Order </a></li>
   <li><a href="/auth/logout">Logout </a></li>
 </ul>
