--- a/src/resources/views/user/user_account_order.hbs
+++ b/src/resources/views/user/user_account_order.hbs
@@ -1,9 +1,13 @@
+{{>header}}
 {{>header_admin}}
  
-<div class="create-container">
-
-
+<div class="create-container"style="margin-top:50px">
+  
 <div class="table-foods container">
+   <a href="/user_account/view" data-target="" class="sidenav-trigger btn-floating pulse cyan">
+     <i class="material-icons">arrow_back</i>
+   
+    </a>
       <div class="row">
     <div class="col s12 push-l">
       <ul class="tabs ">
@@ -21,7 +25,7 @@
           <tr>   
               <th>No</th>  
               <th>Name</th>    
-              <th>Email
+              <th>Phone Number
                   {{!-- {{{sortable 'Email' _sort}}} --}}
               </th>
               <th>Status</th>
@@ -36,13 +40,13 @@
           <tr>
              <td>{{sum @index }}</td>
             <td>{{{this.full_name}}}</td>
-            <td>{{{this.email}}}</td>
+            <td>0{{{this.phone_number}}}</td>
              <td class="{{{ order_status this.order_status}}}">{{{order_status this.order_status}}}</td>
               <td>{{{ convertDate this.createdAt}}}</td>
              <td></td>
              <td>
-                <a href="/order/{{{this._id}}}?Page=1" class="tooltipped btn btn-small   yellow darken-4"data-position="top" data-tooltip="Detail"><i class="material-icons">details</i></a>
-               <a href="/order/status/{{this.order_status}}/{{this._id}}?Page=1" class="tooltipped btn btn-small  blue lighten-2 button-radius " data-position="top" data-tooltip="Accept"><i class="material-icons">check</i></a>
+                <a href="/user_account/{{{this._id}}}?Page=1" class="tooltipped btn btn-small   yellow darken-4"data-position="top" data-tooltip="Detail"><i class="material-icons">details</i></a>
+               
                   <a  data-id="{{{this._id}}}" class=" tooltipped waves-effect waves-light btn  btn-small  modal-trigger btn_cancel red" href="#modal1" data-position="top" data-tooltip="Cancel" ><i class="material-icons">do_not_disturb_alt</i></a>
                </td>
              <td> </td>
@@ -66,7 +70,7 @@
           <tr>   
               <th>No</th>    
               <th>Name</th>    
-              <th>Email
+              <th>Phone Number
                   {{!-- {{{sortable 'Email' _sort}}} --}}
               </th>
               <th>Status</th>
@@ -87,9 +91,9 @@
               <td>{{{ convertDate this.createdAt}}}</td>
              <td></td>
              <td>
-               <a data-position="top" data-tooltip="Revert" href="/order/status/{{this.order_status}}/{{this._id}}/back" class="btn btn-small  tooltipped orange lighten-2 button-radius "><i class="material-icons">replay</i></a>
+            
               <a data-position="top" data-tooltip="Detail" href="/order/{{{this._id}}}?Page=1" class="btn btn-small  tooltipped  yellow darken-4"><i class="material-icons">details</i></a>
-               <a data-position="top" data-tooltip="Accept" href="/order/status/{{this.order_status}}/{{this._id}}" class=" tooltipped btn btn-small  blue lighten-2 button-radius "><i class="material-icons">check</i></a>
+             
              
                </td>
                
@@ -136,8 +140,8 @@
               <td>{{{ convertDate this.createdAt}}}</td>
              <td></td>
              <td>
-                 <a data-position="top" data-tooltip="Revert" href="/order/status/{{this.order_status}}/{{this._id}}/back" class="btn btn-small  tooltipped orange lighten-2 button-radius "><i class="material-icons">replay</i></a>
-              <a data-position="top" data-tooltip="Detail" href="/order/{{{this._id}}}?Page=1" class="btn btn-small  tooltipped  yellow darken-4"><i class="material-icons">details</i></a>
+                 <a data-position="top" data-tooltip="Revert" href="/user_account/status/{{this.order_status}}/{{this._id}}/user_back" class="btn btn-small  tooltipped orange lighten-2 button-radius "><i class="material-icons">replay</i></a>
+              <a data-position="top" data-tooltip="Detail" href="/user_account/{{{this._id}}}?Page=1" class="btn btn-small  tooltipped  yellow darken-4"><i class="material-icons">details</i></a>
                   <a data-position="top" data-tooltip="Delete" data-id="{{{this._id}}}" class="waves-effect waves-light btn tooltipped  btn-small  modal-trigger btn_delete red" href="#modal2"><i class="material-icons">delete</i></a>
              
                </td>
@@ -155,7 +159,7 @@
         </tbody>
       </table>
         {{>pagination}}
-           {{>footer_admin}}
+        
       </div>
 
     </div>
@@ -189,8 +193,8 @@
              <td></td>
              <td>
                
-              <a data-position="top" data-tooltip="Revert" href="/order/status/{{this.order_status}}/{{this._id}}/back" class="btn btn-small  tooltipped orange lighten-2 button-radius "><i class="material-icons">replay</i></a>
-              <a data-position="top" data-tooltip="Detail" href="/order/{{{this._id}}}?Page=1" class="btn btn-small  tooltipped  yellow darken-4"><i class="material-icons">details</i></a>
+              <a data-position="top" data-tooltip="Revert" href="/user_account/status/{{this.order_status}}/{{this._id}}/user_back" class="btn btn-small  tooltipped orange lighten-2 button-radius "><i class="material-icons">replay</i></a>
+              <a data-position="top" data-tooltip="Detail" href="/user_account/{{{this._id}}}?Page=1" class="btn btn-small  tooltipped  yellow darken-4"><i class="material-icons">details</i></a>
                   <a  data-position="top" data-tooltip="Delete" data-id="{{{this._id}}}" class="waves-effect waves-light btn  btn-small  tooltipped  modal-trigger btn_delete red" href="#modal">
                     <i class="material-icons">delete</i>
                   </a>        
@@ -244,7 +248,9 @@
         $(".btn_delete").on("click", function(){
         var dataId = $(this).attr("data-id");
         $(".delete-agree").attr("href", "/order/delete/"+dataId); // Set herf value
+        
     });
 });
 </script>
-   {{>footer_admin}}
+
+  {{>footer}}
