--- a/src/resources/views/user/cart.hbs
+++ b/src/resources/views/user/cart.hbs
@@ -42,7 +42,7 @@
               {{else}}
                 <div class="center">
                   <h5 class="center">Your cart is empty</h5>
-                  <a href="./product_view.hbs" class="btn btn-active">Explore our products</a>
+                  <a href="/goods" class="btn btn-active">Explore our products</a>
                 </div>
             {{/each}}
             </div>
