--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1093,3 +1093,122 @@ section .more {
   font-weight: 600;
   margin-top: 20px;
 }
+
+/* ------------------ product-details -------------------- */
+
+.product-details-main .container {
+  width: 900px !important;
+}
+.product-details-container {
+  display: flex;
+  margin-top: 50px;
+}
+
+.product-details-container .left {
+  flex: 1;
+  width: 20% !important;
+}
+
+.product-details-container .left .pd-name {
+  font-size: 2em;
+  font-weight: 600;
+  overflow-wrap: break-word;
+}
+
+.product-details-container .left .pd-price {
+  margin-top: 20px;
+  font-weight: 500;
+  color: var(--secondary-color);
+}
+
+.product-details-container .left .pd-note {
+  margin-top: 30px;
+  overflow-wrap: break-word;
+  line-height: 1.5;
+  font-size: 0.97em;
+  color: var(--secondary-color);
+  font-weight: 500;
+}
+
+.product-details-container .left .btn {
+  margin-top: 50px;
+  display: block;
+  width: 100%;
+}
+
+.product-details-container .left .help {
+  margin-top: 10px;
+  font-size: 0.9em;
+  color: var(--secondary-color);
+  font-weight: 500;
+}
+
+.product-details-container .right {
+  flex: 2;
+  text-align: right;
+  justify-content: center;
+}
+
+.product-details-container .right .product-img {
+  text-align: right;
+}
+
+.product-details-container .right img {
+  width: 500px;
+  height: 100%;
+  aspect-ratio: auto 500 / 100%;
+  border-radius: 18px;
+}
+
+.product-details-main .container .pd-title {
+  margin-top: 100px;
+  font-size: 1.5em;
+  font-weight: 600;
+}
+
+.product-details-main .container .pd-reviews {
+  padding: 0 !important;
+  display: flex;
+}
+
+.product-details-main .container .pd-reviews .row .col {
+  padding: 0 !important;
+}
+
+.product-details-main .container .pd-reviews .left {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.product-details-main .container .pd-reviews .right {
+  flex: 2;
+}
+
+.product-details-main .container .pd-reviews .right .col {
+  padding: 10px 0 !important;
+  border-bottom: 1px solid var(--border-color);
+}
+
+.product-details-main .container .pd-reviews .right .comment-user {
+  font-size: 1em;
+  font-weight: 500;
+}
+
+.product-details-main
+  .container
+  .pd-reviews
+  .right
+  .comment-stars
+  .material-icons {
+  font-size: 1em !important;
+  color: var(--secondary-color) !important;
+}
+
+.product-details-main .container .pd-reviews .right .comment-content {
+  font-size: 0.9em !important;
+  color: var(--secondary-color);
+  line-height: 1.2;
+  text-align: justify;
+}
