--- a/src/resources/views/admin/promotion_view.hbs
+++ b/src/resources/views/admin/promotion_view.hbs
@@ -31,7 +31,10 @@
         </div>
       </div>
           <div class="row">
-     
+       <div class="input-field col s3">
+      <input type="datetime-local" id="end_date" name="end_date" required="required">
+     <span class="helper-text" data-error="This field cannot be left blank" >End Date*</span>
+        </div>
       </div>
       <div class="row">
         <div class="input-field col s12 ">
