--- a/src/resources/views/user/product_view.hbs
+++ b/src/resources/views/user/product_view.hbs
@@ -77,15 +77,21 @@
                           />
                         </div>
                       <a href="/{{this.product_name}}" class="card-content">
-                        <span class="card-tag">NEW</span>
+                        <span class="card-tag">Discount : {{this.promotion_rate}}%</span>
                         <span class="card-title">{{{this.product_name}}}</span>
                         <span class="card-brief">
                           this is note product
                           {{{this.note}}}
                         </span>
-                        <span class="card-price">{{{formatLongString
+                        <div class="cost" style="display:flex;justify-content: space-evenly">
+                          <span class="card-price">{{{formatLongString
+                            (formatCurrency (discountCost this.unit_price  this.promotion_rate ))
+                          }}}</span>
+                          <span style="text-decoration-line: line-through"class="card-price">{{{formatLongString
                             (formatCurrency this.unit_price)
                           }}}</span>
+                        </div>
+                        
                       </a>
 
                       <div class="btns-container">
