fixed account SJF'5AKG\6Lsjf'5akg\6lh

--- a/src/resources/views/user/news_view.hbs
+++ b/src/resources/views/user/news_view.hbs
@@ -1,3 +1,161 @@
-{{>header}}
-<h1>this is news Page</h1>
-{{>footer}}
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/flickity@2/dist/flickity.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"
+      defer
+    ></script>
+    <script
+      src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"
+      defer
+    ></script>
+
+    <script
+      src="https://kit.fontawesome.com/655396e8e6.js"
+      defer
+      crossorigin="anonymous"
+    ></script>
+
+    <title>Medical Equipment Supply</title>
+  </head>
+  <body>
+    {{>header}}
+    <main id="main" class="subpage-main articles-outer-container">
+      <div class="container">
+        <header class="container-header">
+          <h2 class="title">Make your dailies informative.</h2>
+          <div class="input-field col s6 articles-search">
+            <input id="search" type="text" class="validate" />
+            <label for="search">Search...</label>
+            <a href="#" class="material-icons"> search </a>
+          </div>
+        </header>
+        <div class="articles-container">
+          <div class="main-articles-container">
+            <div class="section-grid">
+              <div class="row">
+                <div class="col s12 m12 l6">
+                  <a href="#" class="card">
+                    <div class="card-image">
+                      <img src="./images/ophthalmologist-not-css.svg" />
+                    </div>
+                    <div class="card-content">
+                      <span class="card-date">October 11 2021</span>
+                      <span class="card-title">Covid-19 in Vietnam </span>
+                      <span class="card-brief"
+                        >Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Ab, quae. Voluptatibus error, nobis pariatur
+                        laudantium omnis facilis blanditiis tenetur
+                        veniam.</span
+                      >
+                      <div class="card-author">By Nhan Dang</div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col s12 m12 l6">
+                  <a href="#" class="card">
+                    <div class="card-image">
+                      <img src="./images/ophthalmologist-not-css.svg" />
+                    </div>
+                    <div class="card-content">
+                      <span class="card-date">October 11 2021</span>
+                      <span class="card-title"
+                        >Covid-19 in Vietnam: New wave tally nears 804,000</span
+                      >
+                      <span class="card-brief"
+                        >Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </span>
+                      <div class="card-author">By Nhan Dang</div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col s12 m12 l6">
+                  <a href="#" class="card">
+                    <div class="card-image">
+                      <img src="./images/ophthalmologist-not-css.svg" />
+                    </div>
+                    <div class="card-content">
+                      <span class="card-date">October 11 2021</span>
+                      <span class="card-title"
+                        >Covid-19 in Vietnam: New wave tally nears 804,000</span
+                      >
+                      <span class="card-brief"
+                        >Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Ab, quae. Voluptatibus error, nobis pariatur
+                        laudantium omnis facilis blanditiis tenetur
+                        veniam.</span
+                      >
+                      <div class="card-author">By Nhan Dang</div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col s12 m12 l6">
+                  <a href="#" class="card">
+                    <div class="card-image">
+                      <img src="./images/ophthalmologist-not-css.svg" />
+                    </div>
+                    <div class="card-content">
+                      <span class="card-date">October 11 2021</span>
+                      <span class="card-title"
+                        >Covid-19 in Vietnam: New wave tally nears 804,000</span
+                      >
+                      <span class="card-brief"
+                        >Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Ab, quae. Voluptatibus error, nobis pariatur
+                        laudantium omnis facilis blanditiis tenetur
+                        veniam.</span
+                      >
+                      <div class="card-author">By Nhan Dang</div>
+                    </div>
+                  </a>
+                </div>
+                <div class="col s12 m12 l6">
+                  <a href="#" class="card">
+                    <div class="card-image">
+                      <img src="./images/ophthalmologist-not-css.svg" />
+                    </div>
+                    <div class="card-content">
+                      <span class="card-date">October 11 2021</span>
+                      <span class="card-title"
+                        >Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit. Dicta odit exercitationem sit magnam adipisci,
+                        architecto fugit? Esse vero quaerat veritatis.</span
+                      >
+                      <span class="card-brief"
+                        >Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Eius aperiam totam obcaecati dolore excepturi quis
+                        labore voluptate, ipsum modi ut sequi, accusamus impedit
+                        tempore accusantium harum et. Quae, inventore
+                        culpa?</span
+                      >
+                      <div class="card-author">By Nhan Dang</div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    {{>footer}}
+    <script src="./script/main.js"></script>
+    <script src="./script/articles.js"></script>
+  </body>
+</html>
