--- a/src/resources/views/user/user_account.hbs
+++ b/src/resources/views/user/user_account.hbs
@@ -1,81 +1,189 @@
-{{>header}}
-<div class="container" style="margin-top:100px">
-   <div class="row">
-    <div class="col s3 m3">
-       <div class="collection">
-        <a href="/user_account/view" class="collection-item  active">Account Settings</a>
-        <a href="/user_account/view_order" class="collection-item">Order</a>
-        <a href="/auth/logout" class="collection-item">Logout</a>
-      
-      </div>
-    </div>
-      <div class="col s9 m9 paper_container z-depth-1">
-           <form class=" col s12"  method="POST" action="/account/{{accounts._id}}/edit?_method=PATCH">
-  
-      <div class="row">
-        <div class="input-field col s12 ">
-          <input  id="full_name" type="text" class="validate" name="full_name" value="{{accounts.full_name}}">
-          <label for="full_name">Name</label>
-        </div>
-      </div>
-          <input type="Number"  hidden name="account_status" value="{{accounts.account_status}}">
-          <input type="Number"  hidden name="accountType" value="{{accounts.accountType}}">
-         
-    
-    <div class="row">
-        <div class="input-field col s12 ">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/flickity@2/dist/flickity.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"
+      defer
+    ></script>
+    <script
+      src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"
+      defer
+    ></script>
 
-          <input id="email" type="email" class="validate" name="email" value="{{accounts.email}}" required="required">
-          <label for="email">Email</label>
-            <span class="helper-text" data-error="This field cannot be left blank" data-success=""></span>
-        </div>
+    <script
+      src="https://kit.fontawesome.com/655396e8e6.js"
+      defer
+      crossorigin="anonymous"
+    ></script>
+
+    <title>Medical Equipment Supply</title>
+  </head>
+  <body>
+    {{>header}}
+    <main id="main " class="subpage-main account-settings-page">
+      <div class="container">
+          <div class="hero-bg"></div>
+            <h2 class="title">We respect your privacy</h2>
+
+          <div 
+          class="main-account-settings-container">
+            
+            <div class="d-flex">
+              <div class="left">
+                <div class="user-pf-img">
+                  <img src="" alt="">
+                </div>
+                <span class="user-fullname">{{accounts.full_name}}</span>
+
+                <a href="/user_account/view" class="collection-item  is-active first-child">Account Settings</a>
+                <a href="/user_account/view_order" class="collection-item">Orders</a>
+                <a href="/auth/logout" class="collection-item">Logout</a>
+              </div>
+              <div class="right">
+                <form class="col s12"  method="POST" action="/account/{{accounts._id}}/edit?_method=PATCH">
+                  <div class="row">
+                    <div class="col s6 m6 ">
+                      <div class="lbl-notation">
+                        <span>Name</span>
+                        <span class="notation">How do you want to be called?</span>
+                      </div>
+                      <input  id="full_name" type="text" class="validate" name="full_name" value="{{accounts.full_name}}">
+                    </div>
+                    <div class=" col s6 m6 ">
+                      <div class="lbl-notation">
+                        <span>Phone</span>  
+                        <span class="notation">For keeping in touch</span>
+                      </div>
+                      <input id="phone_number" type="tel" class="validate" name="phone_number" value="0{{accounts.phone_number}}" required="required">
+                      <span class="helper-text" data-error="This field must be phone number" data-success=""></span>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class=" col s12 m12 ">
+                      <div class="lbl-notation">
+                        <span>Email</span>
+                        <span class="notation">For logging in</span>
+                      </div>
+                      <input type="email" class="validate" name="email" value="{{accounts.email}}" required="required">
+                      <span class="helper-text" data-error="This field cannot be left blank" data-success=""></span>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class=" col s12 m12 ">
+                      <div class="lbl-notation">
+                        <span>Address</span>
+                        <span class="notation">For receiving your orders</span>
+                      </div>
+                      <input id="address" type="Text" class="validate" name="address" value="{{accounts.address}}">
+                    </div>
+                  </div>
+                  {{!-- <div class="row">
+                    <div class=" col s12 ">
+                      <input id="password"type="Text" class="validate" name="password" value="{{accounts.password}}" required="required"/>
+                      r
+                      <label for="password">Password</label>
+                      <span class="helper-text" data-error="This field cannot be left blank" data-success=""></span>
+                    </div>
+                  </div> --}}
+                  <button onclick="" class="btn btn-active" type="submit">Update</button>
+                </form>
+                {{!-- <div class="danger">
+                  <span>Delete account</span>
+                  <span>Delete</span>
+                </div> --}}
+              </div>
+            </div>
+          </div>
+        </div> 
       </div>
+    </main>
+    {{>footer}}
+    <script src="./script/main.js"></script>
+  </body>
+</html>
+
+        {{!-- <div class="row">
+          <div class="col s3 m3">
+            <div class="collection">
+              <a href="/user_account/view" class="collection-item  active">Account Settings</a>
+              <a href="/user_account/view_order" class="collection-item">Order</a>
+              <a href="/auth/logout" class="collection-item">Logout</a>
+            
+            </div>
+          </div>
+            <div class="col s9 m9 paper_container z-depth-1">
+                <form class=" col s12"  method="POST" action="/account/{{accounts._id}}/edit?_method=PATCH">
         
-    {{!-- <div class="row">
-        <div class="file-field input-field col s6">
-       <img src="../uploads/{{products.avatar}}" alt="" class="responsive-img list-img">
-       <br>
-      <div class="btn">
-        <span>File</span>
-        <input type="file" name="image">
-      </div>
-      <div class="file-path-wrapper">
-        <input class="file-path validate" type="text" value="{{products.image}}" name="img_old">
-      </div>
-    </div>
-      </div> --}}
-      <div class="row">
-        <div class="input-field col s12 ">
-          <input id="phone_number" type="tel" class="validate" name="phone_number" value="0{{accounts.phone_number}}" required="required">
-          <label for="phone_number">Phone Number</label>
-            <span class="helper-text" data-error="This field must be phone number" data-success=""></span>
-        </div>
-      </div>
-       <div class="row">
-        <div class="input-field col s12 ">
-          <input id="address" type="Text" class="validate" name="address" value="{{accounts.address}}">
-          <label for="address">Address</label>
-        </div>
-      </div>
-       <div class="row">
-        <div class="input-field col s12 ">
-        <input id="password"type="Text" class="validate" name="password" value="{{accounts.password}}" required="required"/>
-          <label for="password">Password</label>
-            <span class="helper-text" data-error="This field cannot be left blank" data-success=""></span>
-        </div>
-      </div>
-       <button onclick="" class="btn waves-effect waves-light" type="submit">Update
-    <i class="material-icons right">send</i>
-      </button>
-           </form>
-    </div>
+            <div class="row">
+              <div class="input-field col s12 ">
+                <input  id="full_name" type="text" class="validate" name="full_name" value="{{accounts.full_name}}">
+                <label for="full_name">Name</label>
+              </div>
+            </div>
+                <input type="Number"  hidden name="account_status" value="{{accounts.account_status}}">
+                <input type="Number"  hidden name="accountType" value="{{accounts.accountType}}">
+              
+          
+          <div class="row">
+              <div class="input-field col s12 ">
 
-   </div>
-   
-    
-   </div>
-
-
- 
-  
-  {{>footer}}
+                <input id="email" type="email" class="validate" name="email" value="{{accounts.email}}" required="required">
+                <label for="email">Email</label>
+                  <span class="helper-text" data-error="This field cannot be left blank" data-success=""></span>
+              </div>
+            </div> --}}
+              
+          {{!-- <div class="row">
+              <div class="file-field input-field col s6">
+            <img src="../uploads/{{products.avatar}}" alt="" class="responsive-img list-img">
+            <br>
+            <div class="btn">
+              <span>File</span>
+              <input type="file" name="image">
+            </div>
+            <div class="file-path-wrapper">
+              <input class="file-path validate" type="text" value="{{products.image}}" name="img_old">
+            </div>
+          </div>
+            </div> --}}
+            {{!-- <div class="row">
+              <div class="input-field col s12 ">
+                <input id="phone_number" type="tel" class="validate" name="phone_number" value="0{{accounts.phone_number}}" required="required">
+                <label for="phone_number">Phone Number</label>
+                  <span class="helper-text" data-error="This field must be phone number" data-success=""></span>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12 ">
+                <input id="address" type="Text" class="validate" name="address" value="{{accounts.address}}">
+                <label for="address">Address</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12 ">
+              <input id="password"type="Text" class="validate" name="password" value="{{accounts.password}}" required="required"/>
+                <label for="password">Password</label>
+                  <span class="helper-text" data-error="This field cannot be left blank" data-success=""></span>
+              </div>
+            </div>
+            <button onclick="" class="btn waves-effect waves-light" type="submit">Update
+          <i class="material-icons right">send</i>
+            </button>
+          </form>
+          </div>
+        </div> --}}
